fixed menu z-index button issue

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -26,7 +26,7 @@ ng-view {
     .menu-lg-screen {
         display: none;
         position: absolute;
-        z-index: 1;
+        z-index: 2;
         top: 8px;
     }
 
